k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-gke-test
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: node-gke-test
    spec:
      containers:
        - name: node-gke-test
          image: gcr.io/agency-kubernetes-test/node-gke-test:master
          ports:
            - containerPort: 3000
