k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: server
spec:
  selector:
    app: server
  ports:
    - name: server
      protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
