k8s/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "node-gke-test-shilov-dev"
  namespace: "default"
  annotations:
    networking.gke.io/managed-certificates: "node-gke-test.shilov.dev"
spec:
  backend:
    serviceName: "node-gke-test"
    servicePort: 80
